# tetration

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  credentials.json.example  csw_openapi_agent.py  pyproject.toml
.github/workflows/: ci.yml
csw_agent/: __init__.py  __main__.py  cache.py  cli.py  client.py  config.py  csv_tools.py  tabulate_fallback.py  telemetry.py
csw_agent/ai/: __init__.py  claude.py  sandbox.py
csw_agent/ai/prompts/: api_reference.md  csv_system.md  system.md
csw_agent/dashboard/: __init__.py  app.py  chat_api.py  prompt_history.py  queries_api.py  server.py  state.py
csw_agent/queries/: __init__.py  _helpers.py  agents.py  csv_chat.py  enforcement.py  inventory.py  vulnerabilities.py  workspaces.py
dashboard/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts  types.ts
dashboard/src/components/: Card.tsx  Header.tsx  PromptHistoryPanel.tsx  ResultTable.tsx  Sidebar.tsx  StatusBadge.tsx  Toggle.tsx
dashboard/src/hooks/: usePolling.ts
dashboard/src/pages/: Chat.tsx  Configuration.tsx  Home.tsx  Queries.tsx
tests/: conftest.py  test_client.py  test_config.py  test_csv_tools.py  test_dashboard.py  test_prompt_history.py  test_queries.py  test_sandbox.py  test_telemetry.py
