[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csw-agent"
version = "0.2.0"
description = "Cisco Secure Workload OpenAPI interactive agent powered by Claude"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [{name = "CSW Agent contributors"}]
dependencies = [
    "anthropic>=0.34,<1.0",
    "tetpyclient",
    "tabulate>=0.9",
    "urllib3>=1.26",
]

[project.optional-dependencies]
dashboard = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.5",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-tabulate",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.5",
    "httpx>=0.27",
]

[project.scripts]
csw-agent = "csw_agent.cli:main"

[tool.setuptools.packages.find]
include = ["csw_agent*"]

[tool.setuptools.package-data]
csw_agent = ["ai/prompts/*.md", "dashboard/static/**/*"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
